<resources>
    <string name="app_name">Joy-Con Droid</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_enable_canceled">Error occurred while enabling Bluetooth.</string>
    <string name="bt_discovery_canceled">Error occurred while starting Bluetooth discovery.</string>
    <string name="could_not_pair">Could not pair automatically</string>
    <string name="pair_with_switch">Pair Switch</string>
    <string name="sl_label">SL</string>
    <string name="sr_label">SR</string>
    <string name="connected_to_switch">Device connected to Switch</string>
    <string name="disconnected_from_switch">Device disconnected from Switch</string>
    <string name="left_joycon">Left JoyCon</string>
    <string name="user_guide">User Guide</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="revert_bluetooth">Revert Bluetooth Configuration</string>
    <string name="bt_config_is_reverted">Bluetooth Configuration is reverted!</string>
    <string name="bt_config_was_not_changed">Bluetooth Configuration is not modified.</string>

    <string-array name="explanations">
        <item>1. Go to controllers menu on Nintendo Switch.</item>
        <item>2. Click "Change Grip/Order" Menu Item.</item>
        <item>3. Leave Nintendo on pairing mode.</item>
        <item>4. Go to JoyCon menu on this App and Press Sync Button.</item>
        <item>5. Allow your phone to be discovered by other devices.</item>
        <item>6. Wait for Nintendo Switch to initiate connection\n
            Be patient but you might need to try this couple of times.
        </item>
        <item>7. Once Nintendo asked for pairing\n
            wait till JoyCon icon is displayed as below.
        </item>
        <item>8. Press SL and SR buttons couple of times.</item>
        <item>9. Once JoyCon icon turns solid gray\n
            press down button and exit discovery
        </item>
        <item>
            10. Now JoyCon should be operational\n
            If it disconnects at any point repeat these steps.
        </item>
    </string-array>

    <string name="ad_id_interstitial" translatable="false">ca-app-pub-4722456569150221/7389554914</string>
    <string name="ad_id_banner" translatable="false">ca-app-pub-4722456569150221/6544566470</string>
    <string name="ad_id_mapping_reward" translatable="false">ca-app-pub-4722456569150221/2899224419</string>

    <string name="public_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAzsESil7TGUDGG6yWBumL5843Qmob+AWQ+aaiH8eq6urEqVsvh1G3QxNcw+IGr3jtkwqsigI9aJuU6yH8VkBG8rkNl/dbyly8YklSQLAvHK8Cv5P+L0LdztOp8Zwr4Fk/yTYHNsPyR7nqijpnGNrwJDaBC+FKdI6sD/Om+8ndAosESqXmLjL59MCyG93QkVgBDN5J2dhxnnvjk5SJR4wkAlN2gRWqjWf5ORX8eP86SwBktRaBOuml/5Fs/SMZiJniCuIFtoQS61veApojMgYFrfRHEoa+I4EoBpytYZnRa3oruH7tqN0Ixr+kTrDttfEojRQyerhvX0Z2YeezfxWwxwIDAQAB</string>
    <string name="ads_removed">Ads Removed Please Restart The Application</string>
    <string name="ads_not_removed">Ads could not be removed!</string>
    <string name="do_not_show_at_the_start_up">Don\'t show guide at the start up</string>
    <string name="right_joycon">Right JoyCon</string>
    <string name="pro_controller">Pro Controller</string>
    <string name="info_and_legal">Info And Legal</string>

    <string name="info_and_disclaimer">
        <![CDATA[
            <body>
            <h2><span style="color:#000;">App Info<span></h2>
            <br/>
            <p style="color:#888888;">JoyCon Droid emulates Right Joy-Con, Left Joy-Con and Pro Controller.</p>
            <br/>
            <p style="color:#888888;">Please check the User Guide for more information.</p>
            <p style="color:#888888;">This application is in alpha stage and does not work with some phones.</p>
            <br/>
            <p style="color:#888888;">
                Note: This application is not compatible with some of the below Android devices:
                <ul style="color:#888888;">
                    <li style="color:#888888;">Sony</li>
                    <li style="color:#888888;">Xiaomi</li>
                    <li style="color:#888888;">LG</li>
                    <li style="color:#888888;">OnePlus</li>
                    <li style="color:#888888;">Huawei</li>
                </ul>
            </p>
            <br/>
            <p style="color:#888888;">This application is not associated with Nintendo in any way.</p>
            <br/>
            <br/>
            <h2><span style="color:#000;">Disclaimer<span></h2>
            <br/>
            <p style="color:#888888;">JoyCon Droid in no way provides any warranty, express or implied, toward the use of the application and
            possible consequences to you or your property. It is user\'s responsibility to assess the risks of using this
            application or similar application.</p>
            <br/>
            <p style="color:#888888;">The JoyCon Droid Developer is in no way or shape liable for any use of this application.</p>
            <br/>
            </body>
        ]]>
    </string>
    <string name="accept">Accept</string>
    <string name="bt_name_not_set">Device Bluetooth name could not be change change it has to be set manually to %1$s</string>
    <string name="bt_sdp_failed">SDP Settings failed contact the developer.</string>
    <string name="bt_register_failed">Bluetooth could not register application</string>
    <string name="disconnect_controller">Disconnect Controller</string>
    <string name="device_is_not_compatible">Your device might not be compatible with this application. Contact to the developer or manufacturer.</string>
    <string name="ok">OK</string>
    <string name="custom_left_joycon">Custom Left JoyCon UI</string>
    <string name="custom_ui_selection">Select Custom UI</string>
    <string name="custom_ui">Custom UI</string>
    <string name="map_buttons">Map Buttons</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="press_a_button_to_remap">Press a button to remap %s</string>
    <string name="repress_to_map">Press same button to map %s to %s</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="push_right_joystick_up">Push right joystick up</string>
    <string name="push_left_joystick_up">Push left joystick up</string>
    <string name="axis_registered">%s axis registered to %s</string>
    <string name="push_right_joystick_right">Push right joystick right</string>
    <string name="push_left_joystick_right">Push left joystick right</string>
    <string name="joystick_mapping_completed">Do you want to save joystick mapping?</string>
    <string name="save">Save</string>
    <string name="redo">Redo</string>
    <string name="file_permission_is_required">Permission is required for getting list of files.</string>
    <string name="save_button_with_ads">Save (Video Reward)</string>
    <string name="button_mappings_saves">Button mappings have been saved.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="set_bt_address">Enter Bluetooth Mac Address for better connection</string>
    <string name="later">Later</string>
    <string name="set">Set</string>
    <string name="incorrect_mac_address">Incorrect Mac Address</string>
    <string name="never_ask_again">Never Ask Again</string>
    <string name="push_axis_same_direction_to_map_to_button">Push %s to same direction to map to %s</string>

    <!-- Colors -->
    <string name="pro_controller_body_color">ProController Body Color:</string>
    <string name="pro_controller_button_color">ProController Button Color:</string>
    <string name="left_joycon_body_color">Left JoyCon Body Color:</string>
    <string name="left_joycon_button_color">Left JoyCon Button Color:</string>
    <string name="right_joycon_body_color">Right JoyCon Body Color:</string>
    <string name="right_joycon_button_color">Right JoyCon Button Color:</string>
    <string name="color_settings">Color Settings</string>
    <string name="feature_settings">Feature Settings</string>
    <string name="enable_accelerometer">Enable Accelerometer</string>
    <string name="enable_gyroscope">Enable Gyroscope</string>
    <string name="enable_amiibo">Enable NFC (Experimental)</string>

    <string name="purchase_pending">Purchase is pending once purchase is approved restart the application.</string>
    <string name="acknowledgement_failed"> Acknowledgement Failed</string>
    <string name="mtu_warning_title"> MTU Size Warning </string>
    <string name="mtu_warning_text"> NFC Functionality is currently only working on Samsung devices due to technical restrictions. Your device might not support Amiibo.</string>
    <string name="continue_option"> Continue </string>
    <string name="amiibo_experimental_title">Warning</string>
    <string name="amiibo_experimental_text"> NFC Functionality is experimental and might not work.</string>
    <string name="amiibo_file_preset">NFC Binary is set.</string>
    <string name="amiibo_file_cannot_be">Warning! NFC Binary bin cannot be set.</string>
    <string name="enable_haptic_feedback">Enable Haptic Feedback</string>
    <string name="amiibo_bin_path">NFC Binary Path</string>
    <string name="update_available">Update Available</string>
    <string name="update_message">New version of JoyCon Droid is available. Do you want to download the update?</string>
    <string name="update">Update</string>
    <string name="packet_rate">Packet Rate: %d pps</string>
    <string name="invalid_intent">Could NOT Install Custom UI.</string>
    <string name="custom_ui_loaded">Custom UI is loaded.</string>
    <string name="custom_ui_is_not_found">Custom UI is not founded.</string>
    <string name="custom_ui_has_newer_version">Custom UI has newer or same version</string>
</resources>
