<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/action_custom_left_joycon"
            android:icon="@drawable/ic_procontroller_icon"
            android:orderInCategory="100"
            android:title="@string/custom_ui_selection" />
    </group>
    <group>
        <item
            android:id="@+id/action_button_mapping"
            android:icon="@drawable/ic_map_buttons_icon"
            android:orderInCategory="200"
            android:title="@string/map_buttons" />
    </group>
    <group>
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="300"
            android:title="@string/settings" />
    </group>
    <group>
        <item
            android:id="@+id/action_revert_bluetooth"
            android:icon="@drawable/ic_menu_revert_bluetooth"
            android:orderInCategory="400"
            android:title="@string/revert_bluetooth" />
    </group>
    <group android:id="@+id/info">
        <item
            android:id="@+id/action_info"
            android:icon="@drawable/ic_info"
            android:orderInCategory="500"
            android:title="@string/info_and_legal" />
    </group>
    <group>
        <item
            android:id="@+id/action_faq"
            android:icon="@drawable/ic_questionmark"
            android:orderInCategory="600"
            android:title="@string/frequently_asked_questions" />
    </group>
    <group>
        <item
            android:id="@+id/action_discord"
            android:icon="@drawable/ic_discord_logo"
            android:orderInCategory="700"
            android:title="@string/discord" />
    </group>
</menu>