<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/menu_left_joycon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:onClick="showLeftJoyCon"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/menu_pro_controller"
        app:layout_constraintEnd_toStartOf="@id/menu_right_joycon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/left_joycon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_left_joycon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/left_joycon"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_right_joycon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:onClick="showRightJoyCon"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/menu_custom_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_left_joycon"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/right_joycon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_right_joycon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/right_joycon"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_pro_controller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:onClick="showProController"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_custom_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_left_joycon">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/pro_controller"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_pro_controller" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/pro_controller"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_custom_ui"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:onClick="showCustomUi"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_pro_controller"
        app:layout_constraintTop_toBottomOf="@id/menu_right_joycon">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/custom_ui"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_pro_controller" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/custom_ui"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>